--- a/freight/index.html
+++ b/freight/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <title></title>
 	<!--标准mui.css-->
-	<link rel="stylesheet" href="../css/mui.min.css">
+	<link rel="stylesheet" href="css/mui.min.css">
     <script type="text/javascript">
     	
    		document.addEventListener('plusready', function(){
@@ -38,172 +38,5 @@
 			<span class="mui-tab-label">设置</span>
 		</a>
 	</nav>
-	<div class="mui-content">
-		<div id="tabbar" class="mui-control-content mui-active">
-			<div class="title">这是div模式选项卡中的第1个子页面.</div>
-			<div class="title">何谓div模式的选项卡？
-				其实就是通过DIV模拟一个独立页面，通过DIV的显示、隐藏模拟不同页面的切换，典型的SPA模式；</div>
-			<div class="title">
-				这种模式适合简单业务系统，因为每个选项卡内容要写在一个DIV中，
-				若逻辑复杂，会导致当前页面DOM结构繁杂，造成webview响应缓慢，甚至崩溃；
-				因此若系统较复杂，需要下拉刷新等操作，推荐使用webview模式的选项卡；</div>
-		</div>
-		<div id="tabbar-with-chat" class="mui-control-content">
-			<div class="title">这是div模式选项卡中的第2个子页面，该页面展示一个消息列表</div>
-			
-			<ul class="mui-table-view mui-table-view-chevron">
-				<li class="mui-table-view-cell"><a href="" class="mui-navigate-right">Item 1</a></li>
-				<li class="mui-table-view-cell"><a href="" class="mui-navigate-right">Item 2</a></li>
-				<li class="mui-table-view-cell"><a href="" class="mui-navigate-right">Item 3</a></li>
-				<li class="mui-table-view-cell"><a href="" class="mui-navigate-right">Item 4</a></li>
-				<li class="mui-table-view-cell"><a href="" class="mui-navigate-right">Item 5</a></li>
-				<li class="mui-table-view-cell"><a href="" class="mui-navigate-right">Item 6</a></li>
-				<li class="mui-table-view-cell"><a href="" class="mui-navigate-right">Item 7</a></li>
-				<li class="mui-table-view-cell"><a href="" class="mui-navigate-right">Item 8</a></li>
-				<li class="mui-table-view-cell"><a href="" class="mui-navigate-right">Item 9</a></li>
-				<li class="mui-table-view-cell"><a href="" class="mui-navigate-right">Item 10</a></li>
-				<li class="mui-table-view-cell"><a href="" class="mui-navigate-right">Item 11</a></li>
-				<li class="mui-table-view-cell"><a href="" class="mui-navigate-right">Item 12</a></li>
-				<li class="mui-table-view-cell"><a href="" class="mui-navigate-right">Item 13</a></li>
-				<li class="mui-table-view-cell"><a href="" class="mui-navigate-right">Item 14</a></li>
-				<li class="mui-table-view-cell"><a href="" class="mui-navigate-right">Item 15</a></li>
-				<li class="mui-table-view-cell"><a href="" class="mui-navigate-right">Item 16</a></li>
-				<li class="mui-table-view-cell"><a href="" class="mui-navigate-right">Item 17</a></li>
-				<li class="mui-table-view-cell"><a href="" class="mui-navigate-right">Item 18</a></li>
-				<li class="mui-table-view-cell"><a href="" class="mui-navigate-right">Item 19</a></li>
-				<li class="mui-table-view-cell"><a href="" class="mui-navigate-right">Item 20</a></li>
-			</ul>
-			
-		</div>
-		<div id="tabbar-with-contact" class="mui-control-content">
-			<div class="title">这是div模式选项卡中的第3个子页面，该页面展示一个通讯录示例.</div>
-			<ul class="mui-table-view mui-table-view-striped mui-table-view-condensed">
-			<li class="mui-table-view-cell">
-				<div class="mui-slider-cell">
-					<div class="oa-contact-cell mui-table">
-						<div class="oa-contact-avatar mui-table-cell">
-							<img src="../images/60x60.gif" />
-						</div>
-						<div class="oa-contact-content mui-table-cell">
-							<div class="mui-clearfix">
-								<h4 class="oa-contact-name">叶文洁</h4>
-								<span class="oa-contact-position mui-h6">董事长</span>
-							</div>
-							<p class="oa-contact-email mui-h6">
-								yewenjie@sina.com
-							</p>
-						</div>
-					</div>
-				</div>
-			</li>
-			<li class="mui-table-view-cell">
-				<div class="mui-slider-cell">
-					<div class="oa-contact-cell mui-table">
-						<div class="oa-contact-avatar mui-table-cell">
-							<img src="../images/60x60.gif" />
-						</div>
-						<div class="oa-contact-content mui-table-cell">
-							<div class="mui-clearfix">
-								<h4 class="oa-contact-name">艾AA</h4>
-								<span class="oa-contact-position mui-h6">总经理</span>
-							</div>
-							<p class="oa-contact-email mui-h6">
-								aaa@163.com
-							</p>
-						</div>
-					</div>
-				</div>
-			</li>
-			<li class="mui-table-view-cell">
-				<div class="mui-slider-cell">
-					<div class="oa-contact-cell mui-table">
-						<div class="oa-contact-avatar mui-table-cell">
-							<img src="../images/60x60.gif" />
-						</div>
-						<div class="oa-contact-content mui-table-cell">
-							<div class="mui-clearfix">
-								<h4 class="oa-contact-name">罗辑</h4>
-								<span class="oa-contact-position mui-h6">员工</span>
-							</div>
-							<p class="oa-contact-email mui-h6">
-								luoji@126.com
-							</p>
-						</div>
-					</div>
-				</div>
-			</li>
-			<li class="mui-table-view-cell">
-				<div class="mui-slider-cell">
-					<div class="oa-contact-cell mui-table">
-						<div class="oa-contact-avatar mui-table-cell">
-							<img src="../images/60x60.gif" />
-						</div>
-						<div class="oa-contact-content mui-table-cell">
-							<div class="mui-clearfix">
-								<h4 class="oa-contact-name">云天明</h4>
-								<span class="oa-contact-position mui-h6">员工</span>
-							</div>
-							<p class="oa-contact-email mui-h6">
-								ytm@163.com
-							</p>
-						</div>
-					</div>
-				</div>
-			</li>
-			<li class="mui-table-view-cell">
-				<div class="mui-slider-cell">
-					<div class="oa-contact-cell mui-table">
-						<div class="oa-contact-avatar mui-table-cell">
-							<img src="../images/60x60.gif" />
-						</div>
-						<div class="oa-contact-content mui-table-cell">
-							<div class="mui-clearfix">
-								<h4 class="oa-contact-name">史强</h4>
-								<span class="oa-contact-position mui-h6">员工</span>
-							</div>
-							<p class="oa-contact-email mui-h6">
-								shiqiang@gmail.com
-							</p>
-						</div>
-					</div>
-				</div>
-			</li>
-		</ul>
-		</div>
-		<div id="tabbar-with-map" class="mui-control-content">
-			<div class="title">这是div模式选项卡中的第4个子页面，该页面展示一个常见的设置示例.</div>
-			<ul class="mui-table-view">
-			<li class="mui-table-view-cell">
-				<a class="mui-navigate-right">
-					新消息通知
-				</a>
-			</li>
-			<li class="mui-table-view-cell">
-				<a class="mui-navigate-right">
-					隐私
-				</a>
-			</li>
-			<li class="mui-table-view-cell">
-				<a class="mui-navigate-right">
-					通用
-				</a>
-			</li>
-		</ul>
-		<ul class="mui-table-view" style="margin-top: 25px;">
-			<li class="mui-table-view-cell">
-				<a class="mui-navigate-right">
-					关于mui
-				</a>
-			</li>
-		</ul>
-		<ul class="mui-table-view" style="margin-top: 25px;">
-			<li class="mui-table-view-cell">
-				<a style="text-align: center;color: #FF3B30;">
-					退出登录
-				</a>
-			</li>
-		</ul>
-		</div>
-	</div>
 </body>
 </html>
