--- a/freight/html/setting.html
+++ b/freight/html/setting.html
@@ -78,6 +78,7 @@
 			.mui-navbar .mui-bar .mui-title {
 				display: inline-block;
 				width: auto;
+				color: #FFFFFF;
 			}
 			.mui-page-shadow {
 				position: absolute;
@@ -166,7 +167,12 @@
 			    margin-top: 0px;
 			}
 			/*问题反馈在setting页面单独的css==end*/
-			
+			.top-box{
+				background-color: #0078B9 !important;
+			}
+			.mui-icon-left-nav{
+				color: #FFFFFF;
+			}
 		</style>
 		<link rel="stylesheet" type="text/css" href="css/feedback.css" />
 	</head>
@@ -185,7 +191,7 @@
 		<!--单页面开始-->
 		<div id="setting" class="mui-page">
 			<!--页面标题栏开始-->
-			<div class="mui-navbar-inner mui-bar mui-bar-nav">
+			<div class="mui-navbar-inner mui-bar mui-bar-nav top-box">
 				<button type="button" class="mui-left mui-action-back mui-btn  mui-btn-link mui-btn-nav mui-pull-left">
 					<span class="mui-icon mui-icon-left-nav"></span>
 				</button>
@@ -201,8 +207,8 @@
 								<a class="mui-navigate-right" href="#account">
 									<img class="mui-media-object mui-pull-left head-img" id="head-img" src="">
 									<div class="mui-media-body">
-										Hello MUI
-										<p class='mui-ellipsis'>账号:hellomui</p>
+										轩程物流
+										<p class='mui-ellipsis'>账号:18136918998</p>
 									</div>
 								</a>
 							</li>
@@ -213,19 +219,19 @@
 							</li>
 						</ul>
 						<ul class="mui-table-view mui-table-view-chevron">
-							<li class="mui-table-view-cell">
+							<!--<li class="mui-table-view-cell">
 								<a href="#notifications" class="mui-navigate-right">新消息通知</a>
-							</li>
-							<li class="mui-table-view-cell">
+							</li>-->
+							<!--<li class="mui-table-view-cell">
 								<a href="#privacy" class="mui-navigate-right">隐私</a>
-							</li>
-							<li class="mui-table-view-cell">
+							</li>-->
+							<!--<li class="mui-table-view-cell">
 								<a href="#general" class="mui-navigate-right">通用</a>
-							</li>
+							</li>-->
 						</ul>
 						<ul class="mui-table-view mui-table-view-chevron">
 							<li class="mui-table-view-cell">
-								<a href="#about" class="mui-navigate-right">关于MUI <i class="mui-pull-right update">V3.1.0</i></a>
+								<a href="#about" class="mui-navigate-right">关于发啥货 <i class="mui-pull-right update">V1.0.1</i></a>
 							</li>
 						</ul>
 						<ul class="mui-table-view">
@@ -242,7 +248,7 @@
 		<div id="account" class="mui-page">
 			<div class="mui-navbar-inner mui-bar mui-bar-nav">
 				<button type="button" class="mui-left mui-action-back mui-btn  mui-btn-link mui-btn-nav mui-pull-left">
-					<span class="mui-icon mui-icon-left-nav"></span>设置
+					<span class="mui-icon mui-icon-left-nav"></span>
 				</button>
 				<h1 class="mui-center mui-title">账号与安全</h1>
 			</div>
@@ -258,21 +264,21 @@
 							</a>
 							</li>
 							<li class="mui-table-view-cell">
-								<a>姓名<span class="mui-pull-right">Hbuilder</span></a>
+								<a>姓名<span class="mui-pull-right">轩程物流</span></a>
 							</li>
 							<li class="mui-table-view-cell">
-								<a>HBuilder账号<span class="mui-pull-right">hbuilder@dcloud.io</span></a>
+								<a>账号<span class="mui-pull-right">18136918998</span></a>
+							</li>
+							<li class="mui-table-view-cell">
+								<a>地址<span class="mui-pull-right">常州市新北区XX号物流园</span></a>
 							</li>
 						</ul>
 						<ul class="mui-table-view">
 							<li class="mui-table-view-cell">
-								<a>QQ号<span class="mui-pull-right">88888888</span></a>
+								<a id="czmm" class="mui-navigate-right">重置密码</a>
 							</li>
 							<li class="mui-table-view-cell">
-								<a>手机号<span class="mui-pull-right">18601234567</span></a>
-							</li>
-							<li class="mui-table-view-cell">
-								<a>邮箱地址<span class="mui-pull-right">hbuilder@dcloud.io</span></a>
+								<a id="czzfmm" class="mui-navigate-right">重置支付密码</a>
 							</li>
 						</ul>
 					</div>
@@ -282,7 +288,7 @@
 		<div id="notifications" class="mui-page">
 			<div class="mui-navbar-inner mui-bar mui-bar-nav">
 				<button type="button" class="mui-left mui-action-back mui-btn  mui-btn-link mui-btn-nav mui-pull-left">
-					<span class="mui-icon mui-icon-left-nav"></span>设置
+					<span class="mui-icon mui-icon-left-nav"></span>
 				</button>
 				<h1 class="mui-center mui-title">新消息通知</h1>
 			</div>
@@ -369,7 +375,7 @@
 		<div id="privacy" class="mui-page">
 			<div class="mui-navbar-inner mui-bar mui-bar-nav">
 				<button type="button" class="mui-left mui-action-back mui-btn  mui-btn-link mui-btn-nav mui-pull-left">
-					<span class="mui-icon mui-icon-left-nav"></span>设置
+					<span class="mui-icon mui-icon-left-nav"></span>
 				</button>
 				<h1 class="mui-center mui-title">隐私</h1>
 			</div>
@@ -431,7 +437,7 @@
 		<div id="general" class="mui-page">
 			<div class="mui-navbar-inner mui-bar mui-bar-nav">
 				<button type="button" class="mui-left mui-action-back mui-btn  mui-btn-link mui-btn-nav mui-pull-left">
-					<span class="mui-icon mui-icon-left-nav"></span>设置
+					<span class="mui-icon mui-icon-left-nav"></span>
 				</button>
 				<h1 class="mui-center mui-title">通用</h1>
 			</div>
@@ -463,9 +469,9 @@
 		</div>
 
 		<div id="about" class="mui-page">
-			<div class="mui-navbar-inner mui-bar mui-bar-nav">
+			<div class="mui-navbar-inner mui-bar mui-bar-nav top-box">
 				<button type="button" class="mui-left mui-action-back mui-btn  mui-btn-link mui-btn-nav mui-pull-left">
-					<span class="mui-icon mui-icon-left-nav"></span>设置
+					<span class="mui-icon mui-icon-left-nav"></span>
 				</button>
 				<h1 class="mui-center mui-title">关于MUI</h1>
 			</div>
@@ -500,9 +506,9 @@
 		<div id="feedback" class="mui-page feedback">
 			<div class="mui-navbar-inner mui-bar mui-bar-nav">
 				<button type="button" class="mui-left mui-action-back mui-btn  mui-btn-link mui-btn-nav mui-pull-left">
-					<span class="mui-icon mui-icon-left-nav"></span>关于MUI
+					<span class="mui-icon mui-icon-left-nav"></span>
 				</button>
-				<button id="submit" class="mui-btn mui-btn-blue mui-btn-link mui-pull-right">发送</button>
+				<button id="submit" class="mui-btn mui-btn-blue mui-btn-link mui-pull-right mui-title">发送</button>
 				<h1 class="mui-center mui-title">问题反馈</h1>
 			</div>
 			<div class="mui-page-content">
@@ -519,13 +525,10 @@
 							<div class="mui-scroll">
 								<ul class="mui-table-view">
 									<!--仅流应用环境下显示-->
-									<li class="mui-table-view-cell stream">
-										<a href="#">桌面快捷方式创建失败</a>
-									</li>
-									<li class="mui-table-view-cell"><a href="#">界面显示错乱</a></li>
-									<li class="mui-table-view-cell"><a href="#">启动缓慢，卡出翔了</a></li>
-									<li class="mui-table-view-cell"><a href="#">偶发性崩溃</a></li>
-									<li class="mui-table-view-cell"><a href="#">UI无法直视，丑哭了</a></li>
+									<li class="mui-table-view-cell"><a href="#">专线实在不怎么样</a></li>
+									<li class="mui-table-view-cell"><a href="#">服务态度差</a></li>
+									<li class="mui-table-view-cell"><a href="#">服务态度极好</a></li>
+									<li class="mui-table-view-cell"><a href="#">查货宝万岁！</a></li>
 								</ul>
 							</div>
 						</div>
@@ -555,6 +558,7 @@
 
 	</body>
 	<script src="../js/mui.min.js "></script>
+	<script src="../js/app.js"></script>
 	<script src="js/mui.view.js "></script>
 	<script src='js/feedback.js'></script>
 	<script>
@@ -588,6 +592,14 @@
 			}, 300);
 		},500);
 		
+		document.getElementById("czmm").addEventListener('tap', function() {
+			clicked('czmm.html', {}, 'slide-in-right');
+		});
+		
+		document.getElementById("czzfmm").addEventListener('tap', function() {
+			clicked('czzfmm.html', {}, 'slide-in-right');
+		});
+		
 		//分享链接点击事件
 		document.getElementById("share").addEventListener('tap', function() {
 			var ids = [{
@@ -607,12 +619,6 @@
 					title: "发送给微信好友"
 				}, {
 					title: "分享到微信朋友圈"
-				}, {
-					title: "分享到新浪微博"
-				}, {
-					title: "分享到腾讯微博"
-				}, {
-					title: "分享到QQ"
 				}];
 			plus.nativeUI.actionSheet({
 				cancel: "取消",
@@ -834,12 +840,12 @@
 					document.getElementById("head-img").src = s;
 					document.getElementById("head-img1").src = s;
 				}, function(e) {
-					document.getElementById("head-img").src = 'img/logo.png';
-					document.getElementById("head-img1").src = 'img/logo.png';
+					document.getElementById("head-img").src = '../img/buycontent/titpic.png';
+					document.getElementById("head-img1").src = '../img/buycontent/titpic.png';
 				})
 			}else{
-				document.getElementById("head-img").src = 'img/logo.png';
-				document.getElementById("head-img1").src = 'img/logo.png';
+				document.getElementById("head-img").src = '../img/buycontent/titpic.png';
+				document.getElementById("head-img1").src = '../img/buycontent/titpic.png';
 			}
 			
 		}
