--- a/freight/html/setting.html
+++ b/freight/html/setting.html
@@ -479,12 +479,12 @@
 				<div class="mui-scroll-wrapper">
 					<div class="mui-scroll">
 						<ul class="mui-table-view">
-							<li class="mui-table-view-cell mui-plus-visible">
+							<!--<li class="mui-table-view-cell mui-plus-visible">
 								<a id="rate" class="mui-navigate-right">评分鼓励</a>
-							</li>
-							<li class="mui-table-view-cell mui-plus-visible">
+							</li>-->
+							<!--<li class="mui-table-view-cell mui-plus-visible">
 								<a id="welcome" class="mui-navigate-right">欢迎页</a>
-							</li>
+							</li>-->
 							<li class="mui-table-view-cell mui-plus-visible">
 								<a id="share" class="mui-navigate-right">分享推荐</a>
 							</li>
@@ -705,7 +705,7 @@
 						}
 					}, data.title, ["立即更新", "取　　消"]);
 				} else {
-					mui.toast('Hello MUI 已是最新版本~')
+					mui.toast('发啥货 已是最新版本~')
 				}
 			});
 		});
