--- a/freight/html/my.html
+++ b/freight/html/my.html
@@ -256,7 +256,7 @@
 				<div class="content-bottom-title-name">&nbsp;&nbsp;交易记录</div>
 				<div class="content-bottom-title-div1"><img class="content-bottom-title-img1" src="../img/my/next.png" /></div>
 			</div>
-			<div class="content-bottom-title" id="sqyfq">
+			<!--<div class="content-bottom-title" id="sqyfq">
 				<div class="content-bottom-title-div"><img class="content-bottom-title-img" src="../img/my/card.png" /></div>
 				<div class="content-bottom-title-name">&nbsp;&nbsp;申请运费券</div>
 				<div class="content-bottom-title-div1"><img class="content-bottom-title-img1" src="../img/my/next.png" /></div>
@@ -265,7 +265,7 @@
 				<div class="content-bottom-title-div"><img class="content-bottom-title-img" src="../img/my/card.png" /></div>
 				<div class="content-bottom-title-name">&nbsp;&nbsp;授予运费券</div>
 				<div class="content-bottom-title-div1"><img class="content-bottom-title-img1" src="../img/my/next.png" /></div>
-			</div>
+			</div>-->
 			<div class="content-bottom-title">
 				<div class="content-bottom-title-div"><img class="content-bottom-title-img" src="../img/my/bank.png" /></div>
 				<div class="content-bottom-title-name">&nbsp;&nbsp;银行卡</div>
@@ -418,11 +418,11 @@
 			document.getElementById('qbClass').addEventListener('tap',function(){
 				clicked('MyCard.html', {}, 'slide-in-right');
 			})
-			document.getElementById('smsq').addEventListener('tap',function(){
-				clicked('smsq.html', {}, 'slide-in-right');
-			})
-			document.getElementById('sqyfq').addEventListener('tap',function(){
-				clicked('sqyfq.html', {}, 'slide-in-right');
-			})
+//			document.getElementById('smsq').addEventListener('tap',function(){
+//				clicked('smsq.html', {}, 'slide-in-right');
+//			})
+//			document.getElementById('sqyfq').addEventListener('tap',function(){
+//				clicked('sqyfq.html', {}, 'slide-in-right');
+//			})
 		</script>
 </html>
