--- a/freight/html/setting.html
+++ b/freight/html/setting.html
@@ -174,7 +174,7 @@
 				color: #FFFFFF;
 			}
 		</style>
-		<link rel="stylesheet" type="text/css" href="css/feedback.css" />
+		<link rel="stylesheet" type="text/css" href="../css/feedback.css" />
 	</head>
 
 	<body class="mui-fullscreen">
@@ -559,8 +559,8 @@
 	</body>
 	<script src="../js/mui.min.js "></script>
 	<script src="../js/app.js"></script>
-	<script src="js/mui.view.js "></script>
-	<script src='js/feedback.js'></script>
+	<script src="../js/mui.view.js "></script>
+	<script src='../js/feedback.js'></script>
 	<script>
 		mui.init();
 		//初始化单页view
